--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_5.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>HaiJianZhi Web Application</display-name>
   
   <filter>
 		<filter-name>encodingFilter</filter-name>
@@ -24,7 +24,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:com/xyb/resources/spring-dispatcher.xml</param-value>
+			<param-value>classpath:com/haijianzhi/resources/spring-dispatcher.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -38,7 +38,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:/com/xyb/resources/application-context.xml
+			classpath:/com/haijianzhi/resources/application-context.xml
 		</param-value>
 	</context-param>
 
