--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 		<junit.version>4.11</junit.version>
 		<mybatis.version>3.2.8</mybatis.version>
 		<mybatis-spring.version>1.2.3</mybatis-spring.version>
+		<aspectjweaver.version>1.8.4</aspectjweaver.version>
+		<dbcp2.version>2.1</dbcp2.version>
+		<commonsfileupload.version>1.3.1</commonsfileupload.version>
+		<jacksoncore.version>2.5.4</jacksoncore.version>
+		<mysqlconnector.version>5.1.35</mysqlconnector.version>
 	</properties>
 
 	<dependencies>
@@ -27,7 +32,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+				
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -39,11 +49,39 @@
 			<version>${mybatis-spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectjweaver.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>${dbcp2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commonsfileupload.version}</version>
+		</dependency>
+		<dependency>  
+            <groupId>com.fasterxml.jackson.core</groupId>  
+            <artifactId>jackson-databind</artifactId>  
+            <version>${jacksoncore.version}</version>  
+        </dependency>  
+        
+        <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysqlconnector.version}</version>
+		</dependency>
+		        
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>XiaoYuanBangWebApp</finalName>
