--- a/src/main/resources/com/haijianzhi/resources/jdbc-config.properties
+++ b/src/main/resources/com/haijianzhi/resources/jdbc-config.properties
@@ -1,6 +1,11 @@
-# ================ PRODUCTION DB CONFIG ================
-APP.URL=jdbc:jtds:sqlserver://cnprddb01:1531;instanceName=hrsqlins01;DatabaseName=FINAPP
-APP.Driver=net.sourceforge.jtds.jdbc.Driver
-APP.Username=FINAPP_dbo
-APP.Password=RW4finapp
+# ================ QA DB CONFIG ================
+APP.URL=jdbc:mysql://localhost/hjzdb
+APP.Driver=com.mysql.jdbc.Driver
+APP.Username=root
+APP.Password=root
 
+# ================ PRODUCTION DB CONFIG ================
+#APP.URL=jdbc:mysql://localhost/hjzdb
+#APP.Driver=com.mysql.jdbc.Driver
+#APP.Username=root
+#APP.Password=root
